# word_count_cli

./: Cargo.toml  README.md  app.properties
example/: test.txt  test2.txt
example/hop1/: test_hop1.txt
example/hop1/hop2/: test_hop2.txt
example_web/: websites.txt
src/: file_counter.rs  main.rs  utils.rs  web_counter.rs
