[package]
name = "word_count_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
scraper = "0.12.0"
async-recursion = "0.3.0"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }